--- a/static/css/main.css
+++ b/static/css/main.css
@@ -452,9 +452,8 @@ section{
 }
 
 #experiences {
-    margin: 0vh 0rem 5vh 0rem;
-    margin-left: 10.5vw;
-    
+    margin: 0vh 0rem 0vh 0rem;
+    /* margin-left: 10.5vw; */
 }
 
 #expTitle h1 {
@@ -466,7 +465,7 @@ section{
     padding-top: 5vh;
     padding-left: 0rem;
     text-shadow: 4px 4px rgba(0, 0, 0, 0.5);
-    margin: 0;
+    margin: 0 0 0 11vw;
     
     /* margin: 10vh 0   rem 0vh 0rem; */
     
@@ -504,25 +503,25 @@ section{
         z-index: 1;
 
         margin-top: 10vh;
-        margin-left: 10rem;
+        margin-left: 9vw;
     }
     33% {
         z-index: 2;
 
         margin-top: 15vh;
-        margin-left: 13.5rem;
+        margin-left: 12vw;
     }
     66% {
         z-index: 3;
 
         margin-top: 20vh;
-        margin-left: 17rem;
+        margin-left: 15vw;
     }
     100% {
         z-index: 1;
 
         margin-top: 10vh;
-        margin-left: 10rem;
+        margin-left: 9vw;
     }
 }
 
@@ -532,25 +531,25 @@ section{
         z-index: 2;
 
         margin-top: 15vh;
-        margin-left: 13.5rem;
+        margin-left: 12vw;
     }
     33% {
         z-index: 3;
 
         margin-top: 20vh;
-        margin-left: 17rem;
+        margin-left: 15vw;
     }
     66% {
         z-index: 1;
 
         margin-top: 10vh;
-        margin-left: 10rem;
+        margin-left: 9vw;
     }
     100% {
         z-index: 2;
 
         margin-top: 15vh;
-        margin-left: 13.5rem;
+        margin-left: 12vw;
     }
 }
 
@@ -560,25 +559,25 @@ section{
         z-index: 3;
 
         margin-top: 20vh;
-        margin-left: 17rem;
+        margin-left: 15vw;
     }
     33% {
         z-index: 1;
 
         margin-top: 10vh;   
-        margin-left: 10rem;
+        margin-left: 9vw;
     }
     66% {
         z-index: 2;
 
         margin-top: 15vh;
-        margin-left: 13.5rem;
+        margin-left: 12vw;
     }
     100% {
         z-index: 3;
 
         margin-top: 20vh;
-        margin-left: 17rem;
+        margin-left: 15vw;
     }
 }
 
@@ -586,9 +585,9 @@ section{
     z-index: 1;
     position: absolute;
     margin-top: 10vh;
-    margin-left: 10rem;
-    width: 53vh;
-    height: 10vh;
+    margin-left: 9vw;
+    width: 30vw;
+    /* height: 10vh; */
     animation-name: a1;
     animation-duration: 7s;
     animation-iteration-count: infinite;
@@ -597,9 +596,9 @@ section{
     z-index: 2;
     position: absolute;
     margin-top: 15vh;
-    margin-left: 13.5rem;
-    width: 53vh;
-    height: 10vh;
+    margin-left: 12vw;
+    width: 30vw;
+    /* height: 10vh; */
     animation-name: a2;
     animation-duration: 7s;
     animation-iteration-count: infinite;
@@ -608,9 +607,9 @@ section{
     z-index: 3;
     position: absolute;
     margin-top: 20vh;
-    margin-left: 17rem;
-    width: 53vh;
-    height: 10vh;
+    margin-left: 15vw;
+    width: 30vw;
+    /* height: 10vh; */
     animation-name: a3;
     animation-duration: 7s;
     animation-iteration-count: infinite;
@@ -632,31 +631,40 @@ section{
   font-weight: 400;
   font-style: normal; 
     color: rgb(255, 255, 255);
-    font-size: 10vh;
-    padding-left: 6rem;
+    font-size: 8vw;
+    padding-left: 3vw;
     margin-top: 23vh;
-    margin-bottom: 0vh;
-    text-shadow: 4px 4px rgba(0, 0, 0, 0.3);
+    margin-bottom: -4vh;
+    /* text-shadow: 4px 4px rgba(0, 0, 0, 0.3); */
 
     /* margin: 10vh 0   rem 0vh 0rem; */   
 }
 
-#about_right h2 {
-    font-family: "Bebas Neue", serif;
-  font-weight: 400;
-  font-style: normal; 
-    color: rgb(255, 255, 255);
-    font-size: 5vh;
-    padding-left: 6rem;
-    padding-right: 6rem;
-
+#about_right p {
+    font-size: 1.35vw;
+    text-align: left;
+    padding-left: 3vw;
+    padding-right: 6vw;
 }
 
-#about_right p {
-    font-size: 2.5vh;
+#about_right a {
+    color: rgb(255, 242, 189);
+    /* opacity: 100%; */
+    text-decoration: none;
+    font-weight: 700;
+    font-family: "Manrope", serif; 
+    font-size: 1.35vw;
     text-align: left;
-    padding-left: 6rem;
-    padding-right: 6rem;
+    padding-left: 3vw;
+    padding-right: 6vw;
+    /* color: white; */
+    transition: all 400ms ease;
+}
+
+#about_right a:hover {
+    font-size: 1.4vw;
+    color: rgb(214, 184, 64);
+
 }
 
 footer {
@@ -689,6 +697,11 @@ div.scrollmenu {
     display: flex;
     flex-direction: row;
     scroll-behavior: x smooth;
+    background-color: rgba(12, 31, 0, 0.4);
+    border-radius: 100px;
+    width: 99vw;
+    height: 67vh;
+    /* transition: all 400ms ease; */
   }
   .scrollmenu::-webkit-scrollbar {
     display: none;
@@ -745,10 +758,10 @@ div.scrollmenu {
   
 
   .exp p {
-    text-align: left;
+    text-align:left;
     text-wrap: auto;
-    margin-left: 5rem;
-    margin-right: 5rem;
+    margin-left: 5vw;
+    margin-right: 4.5vw;
     font-size: 2.3vh;
     transition: all 400ms ease;
     opacity: 1;
@@ -757,7 +770,7 @@ div.scrollmenu {
   }
 
   .exp:hover p {
-    /* font-size: 2vh; */
+    /* font-size:10vh; */
     opacity: 1;
   }
 
@@ -826,6 +839,10 @@ div.scrollmenu {
     margin-left: 1vw;
     height: 8vh;
     margin-right: -0.5vw;
+}
+
+#middle:hover p {
+    font-size: 2.32vh;
 }
 
 /* @keyframes middle_to_left {
